shorthand value for CSS gap is not kept as-is in serialized and computed values. https://bugs.webkit.org/show_bug.cgi?id=271627 rdar://125335787

Reviewed by Tim Nguyen.

When the shorthand CSS property gap is used, the cssText and computed
declaration can stay in the short form when the values for column and
row are identical.

* LayoutTests/imported/w3c/web-platform-tests/css/css-align/gaps/gap-animation-001-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-align/gaps/gap-animation-002-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-align/gaps/gap-animation-003-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-align/gaps/gap-parsing-002-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-align/parsing/gap-computed-expected.txt:
* Source/WebCore/css/CSSComputedStyleDeclaration.cpp:
(WebCore::CSSComputedStyleDeclaration::getPropertyValue const):
* Source/WebCore/css/StyleProperties.cpp:
(WebCore::canUseShorthandForLonghand):

Canonical link: https://commits.webkit.org/276794@main